# Minmus_Operating_System_in_Rust

./: LICENSE  README.md
Appendix/: build_i686_elf_gcc.sh  i686_elf_gcc_build.sh
LaTeX/: main.tex
LaTeX/sections/: 01_Introduction.tex  01_Project_Introduction.tex  02_Development_Environment.tex  03_Project_Design.tex  03_System_Design.tex  04_Bootloader_Implementation.tex  Abstract.tex  (+17 more)
Machine/: create_disk.bat  start_qemu.bat
MinmusOS/: Cargo.toml  Makefile  README.md  x86_16-minmus.json  x86_32-minmus.json
MinmusOS/apps/hanoi/: Cargo.toml  build.rs  linker.ld
MinmusOS/apps/hanoi/src/: main.rs
MinmusOS/boot/: Cargo.toml  build.rs  linker.ld
MinmusOS/boot/src/: boot.asm  disk.rs  main.rs
MinmusOS/bootloader/: Cargo.toml  build.rs  linker.ld
MinmusOS/bootloader/src/: disk.rs  gdt.rs  main.rs  print.rs
MinmusOS/files/: cargo  license  minmusos  rust  thanks
MinmusOS/kernel/: Cargo.toml  build.rs  linker.ld
MinmusOS/kernel/src/: main.rs
MinmusOS/kernel/src/drivers/: disk.rs  keyboard.rs  mod.rs  pic.rs
MinmusOS/kernel/src/filesystem/: fat.rs  mod.rs
MinmusOS/kernel/src/interrupts/: exceptions.rs  idt.rs  mod.rs  timer.rs
MinmusOS/kernel/src/memory/: allocator.rs  mod.rs  paging.rs
MinmusOS/kernel/src/multitasking/: mod.rs  task.rs
MinmusOS/kernel/src/shell/: cal.rs  color.rs  echo.rs  kill.rs  mod.rs  shell.rs
MinmusOS/kernel/src/syscalls/: handler.rs  mod.rs  print.rs
MinmusOS/kernel/src/timer/: mod.rs  time.rs
MinmusOS/lib/: Cargo.toml
MinmusOS/lib/src/: lib.rs  math.rs  mutex.rs  print.rs  rand.rs  sort.rs  string.rs
(+3 files in other folders)
