[workspace]
members = ["boot", "bootloader", "kernel", "apps/*"]
resolver = "2"

[workspace.package]
version = "0.4.0"
authors = ["Jishen Lin <minmuslin@outlook.com>"]
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 1

[profile.dev.package.boot]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false

[profile.release.package.boot]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false